--- a/commotion-meshbook/en.lproj/MainMenu.xib
+++ b/commotion-meshbook/en.lproj/MainMenu.xib
@@ -14,7 +14,6 @@
 			<string>NSCustomObject</string>
 			<string>NSMenu</string>
 			<string>NSMenuItem</string>
-			<string>NSProgressIndicator</string>
 		</array>
 		<array key="IBDocument.PluginDependencies">
 			<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -32,15 +31,6 @@
 			</object>
 			<object class="NSCustomObject" id="1050">
 				<string key="NSClassName">NSApplication</string>
-			</object>
-			<object class="NSProgressIndicator" id="362176662">
-				<reference key="NSNextResponder"/>
-				<int key="NSvFlags">268</int>
-				<string key="NSFrameSize">{16, 16}</string>
-				<reference key="NSSuperview"/>
-				<string key="NSReuseIdentifierKey">_NS:945</string>
-				<int key="NSpiFlags">20746</int>
-				<double key="NSMaxValue">100</double>
 			</object>
 			<object class="NSMenu" id="660030228">
 				<string key="NSTitle"/>
@@ -175,7 +165,7 @@
 						<reference key="NSMixedImage" ref="1026303971"/>
 						<int key="NSTag">1</int>
 					</object>
-					<object class="NSMenuItem" id="815662153">
+					<object class="NSMenuItem" id="872477767">
 						<reference key="NSMenu" ref="660030228"/>
 						<bool key="NSIsDisabled">YES</bool>
 						<bool key="NSIsHidden">YES</bool>
@@ -216,7 +206,7 @@
 						<reference key="NSMixedImage" ref="1026303971"/>
 						<int key="NSTag">2</int>
 					</object>
-					<object class="NSMenuItem" id="754787661">
+					<object class="NSMenuItem" id="343298316">
 						<reference key="NSMenu" ref="660030228"/>
 						<bool key="NSIsDisabled">YES</bool>
 						<bool key="NSIsHidden">YES</bool>
@@ -478,8 +468,8 @@
 							<reference ref="350772727"/>
 							<reference ref="820103136"/>
 							<reference ref="888680302"/>
-							<reference ref="815662153"/>
-							<reference ref="754787661"/>
+							<reference ref="872477767"/>
+							<reference ref="343298316"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Status Menu</string>
@@ -599,18 +589,13 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">904</int>
-						<reference key="object" ref="815662153"/>
+						<reference key="object" ref="872477767"/>
 						<reference key="parent" ref="660030228"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">905</int>
-						<reference key="object" ref="754787661"/>
+						<reference key="object" ref="343298316"/>
 						<reference key="parent" ref="660030228"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">907</int>
-						<reference key="object" ref="362176662"/>
-						<reference key="parent" ref="0"/>
 					</object>
 				</array>
 			</object>
@@ -628,6 +613,7 @@
 				<string key="848.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="849.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="850.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<dictionary class="NSMutableDictionary" key="851.IBAttributePlaceholdersKey"/>
 				<string key="851.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="852.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="853.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -644,7 +630,6 @@
 				<string key="900.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="904.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="905.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
-				<string key="907.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
