--- a/commotion-meshbook/ViewControllers/ProfilesViewController.xib
+++ b/commotion-meshbook/ViewControllers/ProfilesViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1060</int>
+		<int key="IBDocument.SystemTarget">1070</int>
 		<string key="IBDocument.SystemVersion">12C60</string>
 		<string key="IBDocument.InterfaceBuilderVersion">3084</string>
 		<string key="IBDocument.AppKitVersion">1187.34</string>
@@ -52,7 +52,7 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 21}, {200, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="242829304">
 							<int key="NSCellFlags">-1804599231</int>
@@ -66,7 +66,7 @@
 							<string key="NSPlaceholderString">8.8.8.8</string>
 							<reference key="NSControlView" ref="183771886"/>
 							<bool key="NSDrawsBackground">YES</bool>
-							<object class="NSColor" key="NSBackgroundColor" id="346008339">
+							<object class="NSColor" key="NSBackgroundColor" id="1010372695">
 								<int key="NSColorSpace">2</int>
 								<bytes key="NSRGB">MC44ODIzNTMwMDc4IDAuODg2Mjc0NTc2MiAwLjg5ODAzOTI4MTQAA</bytes>
 							</object>
@@ -87,8 +87,7 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 50}, {214, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="183771886"/>
+						<reference key="NSNextKeyView" ref="1002526812"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="361001689">
 							<int key="NSCellFlags">68157504</int>
@@ -120,7 +119,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 76}, {200, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="443296649"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="360308817">
@@ -131,7 +129,7 @@
 							<string key="NSPlaceholderString">255.255.0.0</string>
 							<reference key="NSControlView" ref="471813710"/>
 							<bool key="NSDrawsBackground">YES</bool>
-							<reference key="NSBackgroundColor" ref="346008339"/>
+							<reference key="NSBackgroundColor" ref="1010372695"/>
 							<reference key="NSTextColor" ref="907406448"/>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -141,7 +139,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 105}, {214, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="471813710"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="1067148081">
@@ -160,7 +157,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 130}, {200, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="532825136"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="700858031">
@@ -171,7 +167,7 @@
 							<string key="NSPlaceholderString">true</string>
 							<reference key="NSControlView" ref="1024142166"/>
 							<bool key="NSDrawsBackground">YES</bool>
-							<reference key="NSBackgroundColor" ref="346008339"/>
+							<reference key="NSBackgroundColor" ref="1010372695"/>
 							<reference key="NSTextColor" ref="907406448"/>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -181,7 +177,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 159}, {214, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1024142166"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="566514646">
@@ -200,7 +195,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 184}, {200, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="593082815"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="908184639">
@@ -211,7 +205,7 @@
 							<string key="NSPlaceholderString">172.29.0.0</string>
 							<reference key="NSControlView" ref="553225150"/>
 							<bool key="NSDrawsBackground">YES</bool>
-							<reference key="NSBackgroundColor" ref="346008339"/>
+							<reference key="NSBackgroundColor" ref="1010372695"/>
 							<reference key="NSTextColor" ref="907406448"/>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -221,7 +215,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 213}, {214, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="553225150"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="846336732">
@@ -240,7 +233,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 292}, {58, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="519638711"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="378849101">
@@ -269,7 +261,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 321}, {214, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1053981207"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="320863023">
@@ -289,7 +280,6 @@
 						<array class="NSMutableArray" key="NSSubviews"/>
 						<string key="NSFrame">{{293, 27}, {4, 358}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="187666544"/>
 						<double key="NSViewAlphaValue">0.20000000000000004</double>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -315,8 +305,7 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 238}, {200, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="587322615"/>
+						<reference key="NSNextKeyView" ref="183771886"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="866099348">
 							<int key="NSCellFlags">-1804599231</int>
@@ -326,7 +315,7 @@
 							<string key="NSPlaceholderString">02:CA:FF:EE:BA:BE</string>
 							<reference key="NSControlView" ref="928263124"/>
 							<bool key="NSDrawsBackground">YES</bool>
-							<reference key="NSBackgroundColor" ref="346008339"/>
+							<reference key="NSBackgroundColor" ref="1010372695"/>
 							<reference key="NSTextColor" ref="907406448"/>
 						</object>
 						<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -336,7 +325,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 267}, {214, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="928263124"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="932954213">
@@ -355,7 +343,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{322, 346}, {200, 25}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="158966440"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="841381696">
@@ -376,7 +363,6 @@
 						<int key="NSvFlags">268</int>
 						<string key="NSFrame">{{319, 375}, {206, 17}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="867537994"/>
 						<bool key="NSEnabled">YES</bool>
 						<object class="NSTextFieldCell" key="NSCell" id="273017533">
@@ -396,7 +382,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{20, 19}, {133, 30}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="182260304"/>
 						<string key="NSReuseIdentifierKey">_NS:22</string>
 						<bool key="NSEnabled">YES</bool>
@@ -421,7 +406,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{198, 19}, {32, 30}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="733887481"/>
 						<string key="NSReuseIdentifierKey">_NS:22</string>
 						<bool key="NSEnabled">YES</bool>
@@ -450,7 +434,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{238, 19}, {32, 30}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1041520193"/>
 						<string key="NSReuseIdentifierKey">_NS:22</string>
 						<bool key="NSEnabled">YES</bool>
@@ -488,7 +471,6 @@
 										<array class="NSMutableArray" key="NSSubviews"/>
 										<string key="NSFrameSize">{248, 332}</string>
 										<reference key="NSSuperview" ref="623367530"/>
-										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="287551817"/>
 										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<bool key="NSEnabled">YES</bool>
@@ -573,7 +555,6 @@
 								</array>
 								<string key="NSFrame">{{1, 1}, {248, 332}}</string>
 								<reference key="NSSuperview" ref="410353110"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="609030028"/>
 								<string key="NSReuseIdentifierKey">_NS:11</string>
 								<reference key="NSDocView" ref="609030028"/>
@@ -585,7 +566,6 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{224, 17}, {15, 102}}</string>
 								<reference key="NSSuperview" ref="410353110"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="890914765"/>
 								<string key="NSReuseIdentifierKey">_NS:58</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -598,8 +578,7 @@
 								<int key="NSvFlags">-2147483392</int>
 								<string key="NSFrame">{{1, 119}, {223, 15}}</string>
 								<reference key="NSSuperview" ref="410353110"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1002526812"/>
+								<reference key="NSNextKeyView" ref="587322615"/>
 								<string key="NSReuseIdentifierKey">_NS:60</string>
 								<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
 								<int key="NSsFlags">1</int>
@@ -610,7 +589,6 @@
 						</array>
 						<string key="NSFrame">{{20, 56}, {250, 334}}</string>
 						<reference key="NSSuperview" ref="373649677"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="623367530"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
@@ -625,7 +603,6 @@
 				</array>
 				<string key="NSFrameSize">{550, 412}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="410353110"/>
 				<string key="NSClassName">NSView</string>
 			</object>
@@ -1319,96 +1296,12 @@
 			<nil key="sourceID"/>
 			<int key="maxID">260</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">ProfilesViewController</string>
-					<string key="superclassName">NSViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="addDefaultProfiles:">id</string>
-						<string key="addProfile:">id</string>
-						<string key="deleteProfile:">id</string>
-						<string key="profileDidEndEdit:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="addDefaultProfiles:">
-							<string key="name">addDefaultProfiles:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="addProfile:">
-							<string key="name">addProfile:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="deleteProfile:">
-							<string key="name">deleteProfile:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="profileDidEndEdit:">
-							<string key="name">profileDidEndEdit:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="deleteButton">NSButton</string>
-						<string key="profilesBSSIDView">NSTextField</string>
-						<string key="profilesChannelView">NSTextField</string>
-						<string key="profilesDNSView">NSTextField</string>
-						<string key="profilesIPGenerateView">NSTextField</string>
-						<string key="profilesIPView">NSTextField</string>
-						<string key="profilesNetmaskView">NSTextField</string>
-						<string key="profilesSSIDView">NSTextField</string>
-						<string key="profilesTableView">NSTableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="deleteButton">
-							<string key="name">deleteButton</string>
-							<string key="candidateClassName">NSButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesBSSIDView">
-							<string key="name">profilesBSSIDView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesChannelView">
-							<string key="name">profilesChannelView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesDNSView">
-							<string key="name">profilesDNSView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesIPGenerateView">
-							<string key="name">profilesIPGenerateView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesIPView">
-							<string key="name">profilesIPView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesNetmaskView">
-							<string key="name">profilesNetmaskView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesSSIDView">
-							<string key="name">profilesSSIDView</string>
-							<string key="candidateClassName">NSTextField</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="profilesTableView">
-							<string key="name">profilesTableView</string>
-							<string key="candidateClassName">NSTableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/ProfilesViewController.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.macosx</string>
-			<real value="1060" key="NS.object.0"/>
+			<real value="1070" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaPlugin.InterfaceBuilder3</string>
